# myCompiler

./: CMakeLists.txt  CMakeSettings.json  README.md
include/: unistd.h
src/: AST.cpp  AST.hpp  CodeGen.cpp  CodeGen.hpp  books.html  lexer.cpp  lexer.l  main.cpp  myFlexer.hpp  parser.tab.cpp  parser.tab.hpp  parser.y  symbolTable.cpp  symbolTable.hpp
test/: hello.c  matrixMul.c  quicksort.c
